[package]
name = "graphic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = {version = "0.25.0", optional = true}
window_rs = {git = "https://github.com/NoodleSamaChan/window_rs.git", rev = "6068419"}

[features]
default = ["minifb"]
minifb = ["dep:minifb"]
egui = []
